dark mode story book

--- a/src/stories/Introduction/Introduction.stories.mdx
+++ b/src/stories/Introduction/Introduction.stories.mdx
@@ -94,7 +94,7 @@ import StackAlt from './assets/stackalt.svg';
       line-height: 12px;
       font-weight: 700;
       background: #E7FDD8;
-      color: #66BF3C;
+      color: #66BF3C !important;
       padding: 4px 12px;
       margin-right: 10px;
       vertical-align: top;
