--- a/src/hooks/useIsFeatureEnabled.stories.mdx
+++ b/src/hooks/useIsFeatureEnabled.stories.mdx
@@ -38,7 +38,7 @@ ReactDOM.createRoot(document.getElementById('root') as HTMLElement).render(
 );
 ```
 
-Then in `home.tsx` you can use the hook
+Then in `home.tsx` you can use the hook without give features
 
 ```typescript jsx
 import { useIsFeatureEnabled } from "design-system";
