--- a/src/hooks/useIsFeatureEnabled.stories.mdx
+++ b/src/hooks/useIsFeatureEnabled.stories.mdx
@@ -17,7 +17,8 @@ const hasBill = useIsFeatureEnabled({ features: ["order", "checkout"], name: "bi
 
 ### Provide user features
 
-Put `<FeatureEnableProvider>` to provide user `features`
+Put `<FeatureEnableProvider>` to provide user `features`<br/>
+In this example above static data is provided, but you can fetch user features.
 
 ```typescript jsx
 import React from 'react'
