--- a/src/styles/.readme.md
+++ b/src/styles/.readme.md
@@ -1,2 +1,2 @@
-**_This directory contains Reusable or global styles.
-Might include configurations, resets, or variables_**
+**_This directory contains only export like variables, ... 
+Because style should be injected with emotion or mui style_**
