rollback inject css with emotion

--- a/src/styles/.readme.md
+++ b/src/styles/.readme.md
@@ -1,2 +1,1 @@
-**_This directory contains only export like variables, ... 
-Because style should be injected with emotion or mui style_**
+**_This directory contains only export like variables_**
