--- a/src/stories/Styles.stories.mdx
+++ b/src/stories/Styles.stories.mdx
@@ -4,7 +4,7 @@ import { Meta } from '@storybook/addon-docs';
 
 
 # Styles
-The system prop `sx` that allows defining system overrides as well as additional CSS styles or
+Design System components use the system prop `sx` that allows defining system overrides as well as additional CSS styles or
 use`Emotion-based` styling solution provided by MUI to style your components.
 
 ### System Prop
