--- a/src/hooks/useColorMode/useColorMode.stories.mdx
+++ b/src/hooks/useColorMode/useColorMode.stories.mdx
@@ -1,6 +1,6 @@
-import { Meta } from '@storybook/addon-docs';
+import { Meta } from "@storybook/addon-docs";
 
-<Meta title=" Hooks/useColorMode"/>
+<Meta title="Hooks/useColorMode"/>
 
 # `useColorMode`
 
