--- a/src/hooks/useMediaQuery/useMediaQuery.stories.mdx
+++ b/src/hooks/useMediaQuery/useMediaQuery.stories.mdx
@@ -1,6 +1,6 @@
-import { Meta } from '@storybook/addon-docs';
+import { Meta } from "@storybook/addon-docs";
 
-<Meta title=" Hooks/useMediaQuery"/>
+<Meta title="Hooks/useMediaQuery"/>
 
 # `useMediaQuery`
 
@@ -30,6 +30,6 @@ function MyComponent() {
   const theme = useTheme();
   const matches = useMediaQuery(theme.breakpoints.up("sm"));
 
-  return <span>{`theme.breakpoints.up('sm') matches: ${matches}`}</span>;
+  return <span>{`theme.breakpoints.up("sm") matches: ${matches}`}</span>;
 }
 ```
