--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -134,11 +134,11 @@ Les équipes techniques, produit, marketing et communication doivent se reposer 
 
 On retrouve sur l'Armature :
 
-La plateforme de marque
-Les fondations
-Les composants
-Les patterns
-Toutes les ressources externes associées
+- La plateforme de marque
+- Les fondations
+- Les composants
+- Les patterns
+- Toutes les ressources externes associées
 
 <div className="subheading">Design System</div>
 
