--- a/src/stories/Installation.stories.mdx
+++ b/src/stories/Installation.stories.mdx
@@ -22,7 +22,7 @@ Put `<ThemeProvider>` around your application.
 Custom theme can be provided as prop `theme={YOUR_CUSTOM_THEME}`
 
 ```typescript jsx
-import { Button, ThemeProvider } from "design-system";
+import { Button, ThemeProvider } from "design-system-tracktor";
 
 const App = () => (
   <ThemeProvider>
