--- a/src/hooks/useColorMode/useColorMode.stories.mdx
+++ b/src/hooks/useColorMode/useColorMode.stories.mdx
@@ -10,7 +10,7 @@ This hook allows switch theme color mode
 Put `<ColorModeProvider>` around your application and `<ColorModeConsumer>` to provide `colorMode` to `<ThemeProvider>`
 
 ```typescript jsx
-import { ColorModeConsumer, ColorModeProvider, ThemeProvider } from "design-system";
+import { ColorModeConsumer, ColorModeProvider, ThemeProvider } from "design-system-tracktor";
 import Home from "./Home";
 
 const App = () => (
@@ -32,7 +32,7 @@ export default App;
 Once `colorMode` is provided, you can toggle theme color mode anywhere in your application
 
 ```typescript jsx
-import { Button, useColorMode } from "design-system";
+import { Button, useColorMode } from "design-system-tracktor";
 
 const Home = () => {
   const { toggleColorMode } = useColorMode();
