--- a/src/stories/Installation.stories.mdx
+++ b/src/stories/Installation.stories.mdx
@@ -3,21 +3,16 @@ import { Meta } from '@storybook/addon-docs';
 <Meta title="Installation"/>
 
 
-# Installation
+## Installation
 
 ```console
-yarn add git+https://github.com/Tracktor/design-system.git
+yarn add design-system-tracktor
 ```
-Specific version can be installed
-
-```console
-yarn add git+https://github.com/Tracktor/design-system.git#1.0.0
-```
-
 
 ## Usage
 
 ### Provide the theme
+
 Put `<ThemeProvider>` around your application.
 Custom theme can be provided as prop `theme={YOUR_CUSTOM_THEME}`
 
