--- a/src/stories/Styles.stories.mdx
+++ b/src/stories/Styles.stories.mdx
@@ -10,7 +10,7 @@ use`Emotion-based` styling solution provided by MUI to style your components.
 ### System Prop
 
 ```typescript jsx
-import { Box } from "design-system-tracktor";
+import { Box } from "@tracktor/design-system";
 
 const styles = {
   box : {
@@ -30,7 +30,7 @@ const styles = {
 For injecting global style you can use `GlobalStyles` and `css` from Material UI. It is an alias of `Global` from emotion css.
 
 ```typescript jsx
-import { GlobalStyles, css } from "design-system-tracktor";
+import { GlobalStyles, css } from "@tracktor/design-system";
 
 <GlobalStyles
   styles={{
@@ -45,7 +45,7 @@ import { GlobalStyles, css } from "design-system-tracktor";
 Or `css` with `GlobalStyles`
 
 ```typescript jsx
-import { GlobalStyles, css } from "design-system-tracktor";
+import { GlobalStyles, css } from "@tracktor/design-system";
 
 <GlobalStyles
   styles={css`
