--- a/src/hooks/useMediaQuery/useMediaQuery.stories.mdx
+++ b/src/hooks/useMediaQuery/useMediaQuery.stories.mdx
@@ -11,7 +11,7 @@ You should provide a media query to the first argument of the hook.
 The media query string can be any valid CSS media query, e.g. `(prefers-color-scheme: dark)`
 
 ```typescript jsx
-import { useMediaQuery } from "design-system-tracktor";
+import { useMediaQuery } from "@tracktor/design-system";
 
 export default function SimpleMediaQuery() {
   const matches = useMediaQuery("(min-width:600px)");
@@ -24,7 +24,7 @@ export default function SimpleMediaQuery() {
 You can use theme breakpoint
 
 ```typescript jsx
-import { useMediaQuery, useTheme } from "design-system-tracktor"
+import { useMediaQuery, useTheme } from "@tracktor/design-system"
 
 function MyComponent() {
   const theme = useTheme();
