--- a/src/stories/Installation.stories.mdx
+++ b/src/stories/Installation.stories.mdx
@@ -6,7 +6,7 @@ import { Meta } from '@storybook/addon-docs';
 ## Installation
 
 ```console
-yarn add design-system-tracktor
+yarn add @tracktor/design-system
 ```
 
 ## Usage
@@ -17,7 +17,7 @@ Put `<ThemeProvider>` around your application.
 Custom theme can be provided as prop `theme={YOUR_CUSTOM_THEME}`
 
 ```typescript jsx
-import { Button, ThemeProvider } from "design-system-tracktor";
+import { Button, ThemeProvider } from "@tracktor/design-system";
 
 const App = () => (
   <ThemeProvider>
