--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -56,15 +56,14 @@ import Mui from './assets/mui.svg';
     }
 
     .link-item {
-      display: block;
-      padding: 20px 30px 20px 15px;
+      padding: 20px 30px;
       border: 1px solid ;
       border-color: rgb(255, 255, 255, .10);
       border-radius: 5px;
       transition: background 150ms ease-out, border 150ms ease-out, transform 150ms ease-out;
       color: rgba(255, 255, 255, 0.55);
       display: flex;
-      align-items: flex-start;
+      align-items: center;
     }
 
     .link-item:hover {
