docs: useSnackbar open

--- a/src/hooks/useSnackbar/useSnackbar.stories.mdx
+++ b/src/hooks/useSnackbar/useSnackbar.stories.mdx
@@ -48,4 +48,4 @@ export default App;
 |-----------------|----------|---------------------------|
 | `openSnackbar`  | Function | Open the snackbar         |
 | `closeSnackbar` | Function | Close the snackbar        |
-| `open`          | boolean  | State of current snackbar |
+| `isOpen`        | boolean  | State of current snackbar |
