docs: useSnackbar open

--- a/src/hooks/useSnackbar/useSnackbar.stories.mdx
+++ b/src/hooks/useSnackbar/useSnackbar.stories.mdx
@@ -22,7 +22,7 @@ const App = () => (
 export default App;
 ```
 
-By default the snackbar is a Alert component. You can change it by passing a `component` props.
+By default, the snackbar is an Alert component. You can change it by passing a `component` props.
 
 ```typescript jsx
 import { Button, SnackbarProvider, useSnackbar } from "@tracktor/design-system";
