--- a/src/stories/Colors.mdx
+++ b/src/stories/Colors.mdx
@@ -1,11 +1,16 @@
 import { ColorItem, ColorPalette, Meta } from '@storybook/blocks';
 
-<Meta title="Colors" />
+<Meta title="Colors"/>
 
 <ColorPalette>
   <ColorItem
     title="theme.palette.color.primary"
     subtitle="Caribbean blue"
-    colors={{ Black: "#004E53", Dark: "#006C74" }}
+    colors={{
+      Black: "#004E53",
+      Dark: "#006C74",
+      Main: "#009BA6",
+      Light: "#33AFB7"
+    }}
   />
 </ColorPalette>
