feat: add support language

--- a/src/context/Theme/ThemeProvider.mdx
+++ b/src/context/Theme/ThemeProvider.mdx
@@ -22,10 +22,12 @@ export default App;
 
 ### Props
 
-| Name                    | Type                              | Required | default            | Description                      |
-|-------------------------|-----------------------------------|----------|--------------------|----------------------------------|
-| `fullHeight`            | boolean                           | false    | true               | Set html and body height to 100% |
-| `includeCssBaseline`    | boolean                           | false    | true               | Include CssBaseline              |
-| `includeScrollBarStyle` | boolean                           | false    | true               | Include scroll bar style         |
-| `theme`                 | "dark" or "light" or ThemeOptions | false    | light              | Theme to use                     |
-| `font`                  | object                            | false    | `{ import: true }` | Font options                     |
+| Name                    | Type                              | Required | default            |   | Description                      |
+|-------------------------|-----------------------------------|----------|--------------------|:--|----------------------------------|
+| `fullHeight`            | boolean                           | false    | true               |   | Set html and body height to 100% |
+| `includeCssBaseline`    | boolean                           | false    | true               |   | Include CssBaseline              |
+| `includeScrollBarStyle` | boolean                           | false    | true               |   | Include scroll bar style         |
+| `theme`                 | "dark" or "light" or ThemeOptions | false    | light              |   | Theme to use                     |
+| `font`                  | object                            | false    | `{ import: true }` |   | Font options                     |
+| `enableColorScheme`     | boolean                           | false    | undefined          |   | Enable color scheme              |
+| `language`              | "fr"                              | "en"     | false              |   | Define locale text globally      |
