--- a/src/context/Snackbar/SnackbarProvider.mdx
+++ b/src/context/Snackbar/SnackbarProvider.mdx
@@ -24,7 +24,27 @@ export default App;
 
 ### Props
 
-| Name               | Type           | Required | Description                       |
-|--------------------|----------------|----------|-----------------------------------|
-| `autoHideDuration` | number         | false    | The duration of the snack appears |
-| `anchorOrigin`     | SnackbarOrigin | false    | Position of the snackbar          |
+<table>
+  <thead>
+  <tr>
+    <th>Name</th>
+    <th>Type</th>
+    <th>Required</th>
+    <th>Description</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td><code>autoHideDuration</code></td>
+    <td>number</td>
+    <td>false</td>
+    <td>The duration of the snack appears</td>
+  </tr>
+  <tr>
+    <td><code>anchorOrigin</code></td>
+    <td>SnackbarOrigin</td>
+    <td>false</td>
+    <td>Position of the snackbar</td>
+  </tr>
+  </tbody>
+</table>
