--- a/src/hooks/useMenu/useMenu.mdx
+++ b/src/hooks/useMenu/useMenu.mdx
@@ -31,9 +31,36 @@ export default App;
 
 ### Available state & function
 
-| Name         | Type        | Description                  |
-|--------------|-------------|------------------------------|
-| `closeMenu`  | Function    | Handle close menu function   |
-| `openMenu`   | Function    | Handle open menu function    |
-| `anchorMenu` | HTMLElement | Anchor menu is a HTMLElement |
-| `isMenuOpen` | boolean     | Boolean open menu            |
+### Available state & function
+
+<table>
+  <thead>
+  <tr>
+    <th>Name</th>
+    <th>Type</th>
+    <th>Description</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td><code>closeMenu</code></td>
+    <td>Function</td>
+    <td>Handles closing the menu</td>
+  </tr>
+  <tr>
+    <td><code>openMenu</code></td>
+    <td>Function</td>
+    <td>Handles opening the menu</td>
+  </tr>
+  <tr>
+    <td><code>anchorMenu</code></td>
+    <td>HTMLElement</td>
+    <td>Anchor element for the menu</td>
+  </tr>
+  <tr>
+    <td><code>isMenuOpen</code></td>
+    <td>boolean</td>
+    <td>Indicates if the menu is open</td>
+  </tr>
+  </tbody>
+</table>
