--- a/src/hooks/usePermission/usePermission.mdx
+++ b/src/hooks/usePermission/usePermission.mdx
@@ -52,16 +52,46 @@ console.log(hasBill) // false
 
 ### Available function
 
-| Name                | Description                            |
-|---------------------|----------------------------------------|
-| `hasPermission`     | Check if has permission                |
-| `appendPermissions` | Append permission to PermissionContext |
-| `setPermissions`    | Set permission to PermissionContext    |
-
+<table>
+  <thead>
+  <tr>
+    <th>Name</th>
+    <th>Description</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td><code>hasPermission</code></td>
+    <td>Check if has permission</td>
+  </tr>
+  <tr>
+    <td><code>appendPermissions</code></td>
+    <td>Append permission to PermissionContext</td>
+  </tr>
+  <tr>
+    <td><code>setPermissions</code></td>
+    <td>Set permission to PermissionContext</td>
+  </tr>
+  </tbody>
+</table>
 
 ### State available
 
-| Name                  | Description                                                 |
-|-----------------------|-------------------------------------------------------------|
-| `disabledPermissions` | List of current disabled permissions (override permissions) |
-| `permissions`         | List of current permissions                                 |
+<table>
+  <thead>
+  <tr>
+    <th>Name</th>
+    <th>Description</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td><code>disabledPermissions</code></td>
+    <td>List of current disabled permissions (override permissions)</td>
+  </tr>
+  <tr>
+    <td><code>permissions</code></td>
+    <td>List of current permissions</td>
+  </tr>
+  </tbody>
+</table>
