--- a/src/hooks/useSnackbar/useSnackbar.mdx
+++ b/src/hooks/useSnackbar/useSnackbar.mdx
@@ -44,8 +44,29 @@ export default App;
 
 ### Available state & function
 
-| Name            | Type     | Description               |
-|-----------------|----------|---------------------------|
-| `openSnackbar`  | Function | Open the snackbar         |
-| `closeSnackbar` | Function | Close the snackbar        |
-| `isOpen`        | boolean  | State of current snackbar |
+<table>
+  <thead>
+  <tr>
+    <th>Name</th>
+    <th>Type</th>
+    <th>Description</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td><code>openSnackbar</code></td>
+    <td>Function</td>
+    <td>Open the snackbar</td>
+  </tr>
+  <tr>
+    <td><code>closeSnackbar</code></td>
+    <td>Function</td>
+    <td>Close the snackbar</td>
+  </tr>
+  <tr>
+    <td><code>isOpen</code></td>
+    <td>boolean</td>
+    <td>State of current snackbar</td>
+  </tr>
+  </tbody>
+</table>
