--- a/src/hooks/useTabs/useTabs.mdx
+++ b/src/hooks/useTabs/useTabs.mdx
@@ -39,7 +39,24 @@ export default App;
 
 ### Available state & function
 
-| Name           | Type     | Description                 |
-|----------------|----------|-----------------------------|
-| `value`        | number   | Value to current active tab |
-| `handleChange` | Function | Handle change tab           |
+<table>
+  <thead>
+  <tr>
+    <th>Name</th>
+    <th>Type</th>
+    <th>Description</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td><code>value</code></td>
+    <td>number</td>
+    <td>Value of the current active tab</td>
+  </tr>
+  <tr>
+    <td><code>handleChange</code></td>
+    <td>Function</td>
+    <td>Handle tab change</td>
+  </tr>
+  </tbody>
+</table>
